  - Added vertexSetter() function to allow easier access to 
    vertex attributes.
  - Used Jeroen Ooms' js::jshints() function to clean up the
    WebGL Javascript code.
  - Allowed "values = NULL" in propertySetter() and vertexSetter()
    to allow code to directly set values.
  - When used with clipping on the bounds, persp3d() and plot3d()
    did not work properly with a shared mouse.  (Reported by
    Marian Talbert.)
  - Shaders are now stored in Javascript strings, not separate
    <script> sections.
  - Shape centers are now stored by scene3d().
  - Font family and numeric font number (style) are now returned
    by rgl.attrib() and are stored by scene3d().
  - Fixed a bug (reported by Dominick Samperi) that caused
    vignettes using WebGL code in knitr to fail to initialize
    properly.  This required adding the setupKnitr() function, 
    which should be called at the start of each vignette.  
    It is *not* called automatically.
  - Fixed a bug (reported by Kurt Hornik) that caused rgl to
    fail to compile when libfreetype 2.6 was linked.
  - Fixed a bug in writePLY (reported by Kurt Hornik).

0.95.1367
  - Added show2d() to allow a 2d plot on a quadrilateral
    in a scene.
  - Fixed bug that sometimes prevented textures from displaying.
  - rgl.bbox() (and hence bbox3d(), decorate3d(), plot3d(), etc.)
    did not return the correct id for the bounding box decoration.
  - Modified configure script to work with OS X 10.11 (suggestion of
    Brian Ripley).

0.95.1415
  - The Mac OS X native windowing system (aglrgl.so) has been 
    dropped; it appears not to work in Yosemite and El Capitan.
  - A memory leak when drawing semi-transparent objects has been
    fixed.  (Reported by Felix Kuehnl.)
  - WebGL code has been moved to the rglwidget package (though
    the functions in rgl still work).
  - Bounding box objects sometimes had miscalculated vertices
    in scene3d().
  - If rgl.init() fails, continue with the NULL device (with warnings).